last minute spacing corrections

--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -31,7 +31,7 @@
 }
 
 .booking-card {
-  margin-bottom: 100px;
+  margin-bottom: 80px;
 }
 
 .booking-heading {
@@ -50,4 +50,8 @@
   bottom: 50%;
   right: 50%;
   transform: translate(50%, -50%);
+}
+
+.my-horse {
+  margin-bottom: 30px;
 }
